# calorie_counter_app

./: CMakeLists.txt  README.md  Readme.md  build_Ut.sh  build_all.sh  prepare_nvim_ide.sh  todo_list.txt
src/: CMakeLists.txt  main.cpp
src/api/: Server.cpp  Server.hpp
src/api/middleware/: ErrorHandling.hpp
src/clients/: OpenFoodFactsClient.cpp  OpenFoodFactsClient.hpp
src/models/: DTOs.hpp  daily_log.cpp  daily_log.hpp  food.cpp  food.hpp  meal_log.cpp  meal_log.hpp  nutrient.cpp  nutrient.hpp
src/services/: AuthService.cpp  AuthService.hpp  FoodService.cpp  FoodService.hpp  UserService.cpp  UserService.hpp
src/storage/: FoodRepository.hpp  JsonFoodRepository.cpp  JsonFoodRepository.hpp  JsonMealRepository.cpp  JsonMealRepository.hpp  MealRepository.hpp  SqliteFoodRepository.cpp  SqliteFoodRepository.hpp
src/utils/: HttpClient.cpp  HttpClient.hpp  Json.hpp  Json_utils.cpp  Json_utils.hpp  Result.cpp  Result.hpp  date_time_utils.hpp
tests/: CMakeLists.txt  test_JsonMealRepository.cpp  test_models.cpp
